--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,4 @@
----
 name: Build and Push Container Image
-
 on:
   pull_request:
     branches: [main]
@@ -8,7 +6,7 @@ on:
     branches: [main]
     paths-ignore: ['**/README.md']
   schedule:
-    - cron: '05 10 * * *'
+    - cron: '5 10 * * *'  # Fixed cron syntax
   workflow_dispatch:
 
 env:
@@ -25,41 +23,63 @@ jobs:
       contents: read
       packages: write
       id-token: write
-
+      attestations: write
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup container storage
-        uses: ublue-os/container-storage-action@main
-
-      - name: Build container image
-        uses: redhat-actions/buildah-build@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          containerfiles: ./Containerfile
-          image: ${{ env.IMAGE_NAME }}
-          tags: latest
-          oci: false
-
+          platforms: linux/amd64
+      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+        if: github.event_name != 'pull_request'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push to registry
-        uses: redhat-actions/push-to-registry@v2
-        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+      
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          tags: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          images: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,prefix={{branch}}-
+          labels: |
+            org.opencontainers.image.title=${{ env.IMAGE_NAME }}
+            org.opencontainers.image.description=${{ env.IMAGE_DESC }}
+      
+      - name: Build and push container image
+        uses: docker/build-push-action@v6
+        id: build
+        with:
+          context: .
+          file: ./Containerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
 
+      
+      - name: Install Cosign
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+        uses: sigstore/cosign-installer@v3
+        with:
+          cosign-release: 'v2.4.0'
+      
       - name: Sign container image
         if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-        run: cosign sign -y --key env://COSIGN_PRIVATE_KEY ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        run: |
+          echo "Signing image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}"
+          cosign sign --yes ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}
         env:
-          COSIGN_EXPERIMENTAL: false
-          COSIGN_PRIVATE_KEY: ${{ secrets.SIGNING_SECRET }}
+          COSIGN_EXPERIMENTAL: 1
