--- a/os_files/etc/rpm-ostreed.conf
+++ b/os_files/etc/rpm-ostreed.conf
@@ -4,14 +4,8 @@
 
 [Daemon]
 AutomaticUpdatePolicy=stage
+IdleExitTimeout=60
+LockLayering=true
+Recommends=true
 
-##########
-# NOTE: This will be set to true by default in Spring 2025
-#
-# Set this to false to enable local layering with dnf
-# This is an unsupported configuration that can lead to upgrade isses
-# Be careful when setting this to true
-#
-# See [future link] for more information
-##########
-# LockLayering=false
+
