--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '0 12 * * *'  # Fixed: was '0 12 * **'
   push:
     branches:
       - main
@@ -75,8 +75,7 @@ jobs:
       - name: Sign image
         if: github.event_name != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | cosign login ghcr.io -u ${{ github.actor }} --password-stdin
-          
+          # Sign using the exact digest from push step
           cosign sign --yes \
             -a "repo=${{ github.repository }}" \
             -a "workflow=${{ github.workflow }}" \
@@ -85,12 +84,14 @@ jobs:
             -a "event=${{ github.event_name }}" \
             ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.push.outputs.digest }}
         env:
-          COSIGN_EXPERIMENTAL: 1
+          COSIGN_EXPERIMENTAL: "1"
       
       - name: Verify signature
         if: github.event_name != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         run: |
           cosign verify \
-            --certificate-identity-regexp="^https://github.com/${{ github.repository_owner }}/" \
+            --certificate-identity="https://github.com/${{ github.repository }}/.github/workflows/build.yml@${{ github.ref }}" \
             --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
             ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.push.outputs.digest }}
+        env:
+          COSIGN_EXPERIMENTAL: "1"
